add main styles to main nav menu

--- a/wp-content/themes/bf-anna/sass/base/_typography.scss
+++ b/wp-content/themes/bf-anna/sass/base/_typography.scss
@@ -9,4 +9,12 @@ header {
             font-weight: 600;
         }
     }
+    .main-navigation {
+        background: lightgray;
+        li {
+            a {
+                font-size: 22px
+            }
+        }
+    }
 }
