updated main nav menu styles

--- a/wp-content/themes/bf-anna/sass/themes/_theme.scss
+++ b/wp-content/themes/bf-anna/sass/themes/_theme.scss
@@ -16,5 +16,8 @@ header#masthead {
                 background: #daaccf;
             }
         }
+        .current-menu-item {
+                background: #8d73bc;
+        }
     }
 }
