--- a/wp-content/themes/bf-anna/sass/themes/_theme.scss
+++ b/wp-content/themes/bf-anna/sass/themes/_theme.scss
@@ -21,3 +21,20 @@ header#masthead {
         }
     }
 }
+
+.front-page {
+    .main-carousel {
+        .carousel-indicators {
+            li {
+                border-color: #333;
+                &.active {
+                    background: #8d73bc;
+                }
+            }
+        }
+        .carousel-control {
+            background: none;
+            border-color: #333333;
+        }
+    }
+}
