--- a/wp-content/themes/bf-anna/sass/layout/_footer.scss
+++ b/wp-content/themes/bf-anna/sass/layout/_footer.scss
@@ -1,5 +1,6 @@
 footer#colophon {
     .container-inner {
+        padding: 10px 0;
         @include clearfix;
         &>div {
             float: left;
