--- a/wp-content/themes/bf-anna/sass/themes/_theme.scss
+++ b/wp-content/themes/bf-anna/sass/themes/_theme.scss
@@ -27,7 +27,8 @@ header#masthead {
         .carousel-indicators {
             li {
                 border-color: #333;
-                &.active {
+                &.active,
+                &:hover {
                     background: #8d73bc;
                 }
             }
