add menu for lang switcher plugin and some styles for it

--- a/wp-content/themes/bf-anna/sass/layout/_header.scss
+++ b/wp-content/themes/bf-anna/sass/layout/_header.scss
@@ -12,6 +12,16 @@ header#masthead {
             }
         }
         .main-navigation {
+            .main-nav-menu {
+                float: left;
+            }
+            .lang-menu {
+                float: right;
+                li {
+                        padding: 10px 10px;
+                        text-decoration: none;
+                }
+            }
             ul.nav-menu {
                 @include clearfix;
                 li {
