--- a/wp-content/themes/bf-anna/sass/themes/_theme.scss
+++ b/wp-content/themes/bf-anna/sass/themes/_theme.scss
@@ -5,6 +5,13 @@ body {
 header#masthead {
     .main-navigation {
         background: #daaccf;
+        .lang-menu {
+            li {
+                &:hover {
+                    background: inherit;
+                }
+            }
+        }
         li {
             a {
                 color: #333;
