--- a/wp-content/themes/bf-anna/sass/main.scss
+++ b/wp-content/themes/bf-anna/sass/main.scss
@@ -1,6 +1,7 @@
 @import "normalize/import-now";
 
 @import 'utils/variables';
+@import 'utils/content-align';
 
 @import 'mixins/mixins';
 
@@ -11,6 +12,7 @@
 @import 'layout/footer';
 
 @import 'pages/home';
+@import 'pages/contacts';
 
 @import 'themes/theme';
 
