changed width of carousel, prevent.default to 2-nd link of menu

--- a/wp-content/themes/bf-anna/sass/base/_typography.scss
+++ b/wp-content/themes/bf-anna/sass/base/_typography.scss
@@ -19,6 +19,14 @@ header {
     }
 }
 
+.front-page {
+    .main-carousel {
+        .carousel-indicators {
+            //font-size: 14px;
+        }
+    }
+}
+
 .comments-page {
     .comment-list {
         .comment {
