add hover to front-page carousel navs

--- a/wp-content/themes/bf-anna/sass/themes/_theme.scss
+++ b/wp-content/themes/bf-anna/sass/themes/_theme.scss
@@ -43,6 +43,9 @@ header#masthead {
         .carousel-control {
             background: none;
             border-color: #333333;
+            &:hover {
+                color: #8d73bc;
+            }
         }
     }
 }
