all pages are ready, needs styling

--- a/wp-content/themes/bf-anna/sass/pages/_assistance.scss
+++ b/wp-content/themes/bf-anna/sass/pages/_assistance.scss
@@ -1,6 +1,8 @@
 .assistance-page {
+    padding: 0 15px;
+
     .assistance-wrapper {
-        padding: 20px 15px;
+        padding: 20px 0;
     }
 
     .assistance-requisites, .assistance-title {
