--- a/wp-content/themes/bf-anna/sass/pages/_contacts.scss
+++ b/wp-content/themes/bf-anna/sass/pages/_contacts.scss
@@ -1,8 +1,9 @@
 // contacts-page layout
 .contacts-page {
+    padding: 0 15px;
 
     .contacts-wrapper {
-        padding: 20px 15px;
+        padding: 20px 0;
     }
 
     .contacts-text, .contacts-map {
