--- a/wp-content/themes/bf-anna/sass/main.scss
+++ b/wp-content/themes/bf-anna/sass/main.scss
@@ -15,6 +15,8 @@
 @import 'pages/comments';
 @import 'pages/contacts';
 @import 'pages/assistance';
+@import 'pages/events';
+@import 'pages/events-single-post';
 
 @import 'themes/theme';
 
