--- a/wp-content/themes/bf-anna/sass/base/_typography.scss
+++ b/wp-content/themes/bf-anna/sass/base/_typography.scss
@@ -10,19 +10,13 @@ header {
         }
     }
     .main-navigation {
-        background: lightgray;
         li {
             a {
                 font-size: 14px
             }
         }
-    }
-}
-
-.front-page {
-    .main-carousel {
-        .carousel-indicators {
-            //font-size: 14px;
+        .nav-menu > li > a {
+            font-weight: 600;
         }
     }
 }
@@ -64,12 +58,12 @@ header {
     }
 }
 
-.gallery-page{
+.gallery-page {
     .album-title {
         font-size: 19px;
         font-weight: 400;
     }
-    .album-date{
+    .album-date {
         font-size: 18px;
         font-style: italic;
     }
