--- a/wp-content/themes/bf-anna/sass/main.scss
+++ b/wp-content/themes/bf-anna/sass/main.scss
@@ -11,12 +11,14 @@
 @import 'layout/header';
 @import 'layout/footer';
 
+@import 'pages/projects';
 @import 'pages/home';
 @import 'pages/comments';
 @import 'pages/gallery';
 @import 'pages/gallery-single';
 @import 'pages/contacts';
 @import 'pages/assistance';
+
 
 
 @import 'themes/theme';
