--- a/wp-content/themes/bf-anna/sass/main.scss
+++ b/wp-content/themes/bf-anna/sass/main.scss
@@ -21,5 +21,8 @@
 @import 'pages/events';
 @import 'pages/events-single-post';
 
-
 @import 'themes/theme';
+
+@import 'media/header-media';
+@import 'media/footer-media';
+
