--- a/wp-content/themes/bf-anna/style.css
+++ b/wp-content/themes/bf-anna/style.css
@@ -557,7 +557,7 @@ a:active {
 
 .main-navigation ul ul {
 	box-shadow: 0 3px 3px rgba(0, 0, 0, 0.2);
-	float: left;
+	/*float: left;*/
 	position: absolute;
 	top: 1.5em;
 	left: -999em;
@@ -591,12 +591,12 @@ a:active {
 
 .main-navigation ul li:hover > ul,
 .main-navigation ul li.focus > ul {
-	left: auto;
+	/*left: auto;*/
 }
 
 .main-navigation ul ul li:hover > ul,
 .main-navigation ul ul li.focus > ul {
-	left: 100%;
+	/*left: 100%;*/
 }
 
 .main-navigation .current_page_item > a,
@@ -611,7 +611,7 @@ a:active {
 	display: block;
 }
 
-@media screen and (min-width: 37.5em) {
+@media screen and (min-width: 1100px) {
 	.menu-toggle {
 		display: none;
 	}
