--- a/wp-content/themes/bf-anna/sass/pages/_events.scss
+++ b/wp-content/themes/bf-anna/sass/pages/_events.scss
@@ -62,8 +62,11 @@
     .event-post-title {
         padding-left: 20px;
 
+
         h3 {
             display: inline-block;
+            margin-right: 30px;
+            margin-bottom: 20px;
         }
 
     }
