fix bug with touchscreen in dropdown

--- a/wp-content/themes/bf-anna/sass/layout/_header.scss
+++ b/wp-content/themes/bf-anna/sass/layout/_header.scss
@@ -90,4 +90,10 @@ header#masthead {
             right: 130px
         }
     }
+    .focus {
+        border-bottom: none !important;
+        .sub-menu {
+            display: none !important;
+        }
+    }
 }
