fix border in dropdown

--- a/wp-content/themes/bf-anna/sass/themes/_theme.scss
+++ b/wp-content/themes/bf-anna/sass/themes/_theme.scss
@@ -45,6 +45,9 @@ header#masthead {
             }
         }
     }
+    .focus {
+        border-bottom-color: transparent !important;
+    }
 }
 
 footer#colophon {
