--- a/wp-content/themes/bf-anna/sass/media/_header-media.scss
+++ b/wp-content/themes/bf-anna/sass/media/_header-media.scss
@@ -31,12 +31,12 @@
                 }
             }
         }
-        .focus {
-                border-bottom-color: transparent !important;
-            .sub-menu {
-                display: none !important;
-            }
-        }
+        //.focus {
+        //        border-bottom-color: transparent !important;
+        //    .sub-menu {
+        //        display: none !important;
+        //    }
+        //}
     }
 }
 
